--- a/public/index.html
+++ b/public/index.html
@@ -64,7 +64,7 @@
       })();
     </script>
   </head>
-  <body>
+  <body class="jet-app">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
   </body>
