--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,11 @@
       name="description"
       content="Jet Protocol is a decentralized borrowing and lending protocol built on Solana." />
     <link rel="icon" type="image/png" href="img/jet/favicon_gradient.png" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;1,100;1,300;1,400;1,700&display=swap"
+      rel="stylesheet" />
     <link rel="manifest" href="manifest.json" />
     <link
       rel="stylesheet"
