--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,7 @@
     <link
       href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;1,100;1,300;1,400;1,700&display=swap"
       rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap" rel="stylesheet" />
     <link rel="manifest" href="manifest.json" />
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-YVCT1QHB5G"></script>
     <script>
