favicon and warning fixes

--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     <meta
       name="description"
       content="Jet Protocol is a decentralized borrowing and lending protocol built on Solana." />
-    <link rel="icon" type="image/png" href="img/jet/favicon_gradient.png" />
+    <link rel="icon" type="image/png" href="img/jet/favicon.ico" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
